Relatórios em excel

--- a/WebUI/Views/Cadastro/Index.cshtml
+++ b/WebUI/Views/Cadastro/Index.cshtml
@@ -8,6 +8,8 @@
 
 <p>
     <a asp-action="Create">Create New</a>
+    |
+    <a asp-action="Export">Relatório</a>
 </p>
 <div class="card card-full">
     <div class="card-body p-0">
